Minor change: object -> state configuration

--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,7 @@ At the heart of scientific investigation is the identifying and organizing of ob
 
 
 
-It's quite possible, however, that we won't be able to distinguish between two objects with only one quantity. Say, for instance, that we're talking about weather. Knowing what the temperature will be tomorrow is certainly useful, but as anyone from Florida can tell you, 80$^o$F with 95$\%$ humidity is very different than 80$^o$F with 30$\%$ humidity. In distinguishing objects, then, we will often want to define more than one quantity, to give an even more descriptive way of categorizing objects. By defining enough quantities to distinguish one object from another, but not so many such that we have redundancies, we can define a \textbf{coordinate system}.
+It's quite possible, however, that we won't be able to distinguish between two objects with only one quantity. Say, for instance, that we're talking about weather. Knowing what the temperature will be tomorrow is certainly useful, but as anyone from Florida can tell you, 80$^o$F with 95$\%$ humidity is very different than 80$^o$F with 30$\%$ humidity. In distinguishing objects, then, we will often want to define more than one quantity, to give an even more descriptive way of categorizing objects. By defining enough quantities to distinguish one state configuration from another, but not so many such that we have redundancies, we can define a \textbf{coordinate system}.
 
 Normally, we think of coordinate systems in the context of quantifying an object's position, in terms of its x-, y-, and z-coordinates, but this is by no means the only context that coordinate systems arise in. Consider, for instance, phase space. Configurations of a state can be distinguished by position as well as by momentum, which would be our two quantities, thus giving us a coordinate system. 
 
